--- a/css/styles.css
+++ b/css/styles.css
@@ -61,16 +61,16 @@ body {
 
 .home .home-content {
   display: flex;
+  align-items: center;
 }
 
 .home .home-content .home-c1 {
-  border: 3px solid var(--primary);
   width: 60%;
   height: auto;
+  align-items: center;
   text-align: center;
+  padding: auto;
 }
-
-.home 
 
 .home .home-content .home-c2 {
   background-color: var(--primary);
@@ -80,5 +80,23 @@ body {
   height: 620px;
   margin-top: 50px;
   margin-right: 50px;
+}
+
+.home .home-content .home-c1 h1 {
+  background-color: var(--primary);
+  width: auto;
+  margin: 0 200px 20px 200px;
+  padding: 10px 0 10px 0;
+  border: 5px solid var(--border);
+  border-radius: 20px;
+}
+
+.home .home-content .home-c1 h4 {
+  background-color: var(--primary);
+  width: auto;
+  margin: 0 250px 20px 250px;
+  padding: 10px 0 10px 0;
+  border: 5px solid var(--border);
+  border-radius: 20px;
 }
 
