--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 :root {
-  --header: #3a6655;
-  --bg: #618c7b;
-  --primary: #96b5ad;
-  --border: #598979;
+  --header: #6c3005;
+  --bg: #e8d8cb;
+  --primary: #ccbcaf;
+  --border: ;
 }
 
 * {
@@ -101,7 +101,7 @@ body {
 }
 
 .home .home-content .home-c2 img {
-  height: 550px;
+  height: 580px;
   width: 600px;
 }
 
