--- a/css/styles.css
+++ b/css/styles.css
@@ -35,9 +35,9 @@ body {
   font-size: 30px;
 }
 
-.navbar .navbar-logo span {
+.navbar .navbar-logo a {
   color: var(--primary);
-  font-style: italic;
+  font-style: 'Madimi One';
 }
 
 .navbar .navbar-nav {
@@ -80,15 +80,17 @@ body {
   height: 620px;
   margin-top: 50px;
   margin-right: 50px;
+  background-image: url(../img/Sepatu1.jpg);
+  background-repeat: no-repeat;
+  background-position: cover;
 }
 
 .home .home-content .home-c1 h1 {
-  background-color: var(--primary);
-  width: auto;
-  margin: 0 200px 20px 200px;
-  padding: 10px 0 10px 0;
   border: 5px solid var(--border);
   border-radius: 20px;
+  margin: 0 150px 0 150px;
+  padding: 10px 0 10px 0;
+  background-color: var(--primary);
 }
 
 .home .home-content .home-c1 h4 {
@@ -99,9 +101,3 @@ body {
   border: 5px solid var(--border);
   border-radius: 20px;
 }
-
-.home .home-content .home-c2 img {
-  height: 580px;
-  width: 600px;
-}
-
